# neomacs

./: .dir-locals.el  Cargo.toml
.github/workflows/: build.yml
neomacs/: Cargo.toml
neomacs/src/: app.rs  buffer.rs  command.rs  error.rs  events.rs  lib.rs  main.rs  pane.rs  ping.rs  point.rs  render.rs  rpc.rs  state.rs  window.rs
neomacs/src/rpc/: codec.rs  convert.rs  extensions.rs  handler.rs  server.rs  tcp.rs
neomacs_convert/: Cargo.toml
neomacs_convert/src/: lib.rs
neomacs_proc_macros/: Cargo.toml
neomacs_proc_macros/src/: lib.rs
src/: app.rs  buffer.rs  error.rs  events.rs  lib.rs  main.rs  redraw.rs  renderer.rs  rpc.rs  state.rs
src/rpc/: codec.rs  handler.rs  msgpack_rpc.rs  server.rs  tcp.rs  unix.rs
