[package]
name = "neomacs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
# https://docs.rs/tokio/1.18.2
tokio = { version = "1.18.2", features=["full"] }
# Allows creating async trait functions
# https://docs.rs/async-trait/0.1.53
async-trait = "0.1.53"
# Rope datastructure for editing text buffers
# https://docs.rs/ropey/1.4.1
ropey = "1.4.1"
# Fast lock primitives
# https://docs.rs/parking_lot/0.12.0
parking_lot = "0.12.0"