[package]
name = "neomacs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
# https://docs.rs/tokio/1.18.2
tokio = { version = "1.18.2", features=["full"] }
# Rope datastructure for editing text buffers
# https://docs.rs/ropey/1.4.1
ropey = "1.4.1"
# Generic error type
# https://docs.rs/anyhow/1.0.57
anyhow = { version = "1.0.57", features = ["backtrace"] }
# Derive macro for std::error::Error
# https://docs.rs/thiserror/1.0.31
thiserror = "1.0.31"
# Fast lock primitives
# https://docs.rs/parking_lot/0.12.0
parking_lot = "0.12.0"