[package]
name = "neomacs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
# https://docs.rs/tokio/1.18.2
tokio = { version = "1.18.2", features=["full"] }
# Rope datastructure for editing text buffers
# https://docs.rs/ropey/1.4.1
ropey = "1.4.1"
# Generic error type
# https://docs.rs/anyhow/1.0.57
anyhow = { version = "1.0.57", features = ["backtrace"] }
# Derive macro for std::error::Error
# https://docs.rs/thiserror/1.0.31
thiserror = "1.0.31"
# Fast lock primitives
# https://docs.rs/parking_lot/0.12.0
parking_lot = "0.12.0"
# Serialization/deserialization framework
# https://docs.serde.rs/serde/
serde = { version = "1.0.137", features = ["derive"] }
# MessagePack implementation
# https://docs.rs/rmp/latest/rmp/
rmp = "0.8.11"
# MessagePack serde integration
# https://docs.rs/rmp-serde/latest/rmp_serde/ 
rmp-serde = "1.1.0"
# Generic MessagePack "Value" type
# https://docs.rs/rmpv/1.0.0
rmpv = "1.0.0"
# Allows adding async functions to traits
# https://docs.rs/async-trait/0.1.53
async-trait = "0.1.53"